# runar

./: .gitignore  CHANGELOG.md  CLAUDE.md  GAP-FIX-PLAN.md  LANGUAGE-GAP-REPORT.md  README.md  SNARK_VERIFY_ROADMAP.md  VERIFICATION_REVIEW_CODEX.md  check-ts-vs-go.mjs  go.work  go.work.sum  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.planning/: STATE.md
artifacts/: arithmetic.runar.json  arithmetic.tsop.json  basic-p2pkh.runar.json  basic-p2pkh.tsop.json  boolean-logic.runar.json  boolean-logic.tsop.json  stateful.runar.json  stateful.tsop.json
audits/: canonical-json-rfc8785-parity.md  cross-language-completeness-20260510.md  cross-language-completeness-20260513.md  cross-language-completeness-20260514.md  cross-language-completeness-20260516.md  phase13-prep.md  remediation-plan-20260511.md  remediation-report-20260512.md
compilers/rust/: Cargo.toml  README.md
compilers/rust/src/: artifact.rs  debug_subcommand.rs  lib.rs  main.rs
compilers/rust/src/codegen/: babybear.rs  bn254.rs  ec.rs  emit.rs  fiat_shamir_kb.rs  koalabear.rs  merkle.rs  mod.rs  opcodes.rs  optimizer.rs  p256_p384.rs  poseidon2_koalabear.rs  poseidon2_merkle.rs  rabin.rs  slh_dsa.rs  stack.rs  wots.rs
compilers/rust/src/frontend/: anf_lower.rs  anf_optimize.rs  ast.rs  constant_fold.rs  diagnostic.rs  expand_fixed_arrays.rs  mod.rs  parser.rs  parser_gocontract.rs  parser_java.rs  parser_move.rs  parser_python.rs  parser_ruby.rs  parser_rustmacro.rs  parser_sol.rs  parser_zig.rs  side_effect_summary.rs  typecheck.rs  validator.rs
compilers/rust/src/ir/: loader.rs  mod.rs  unknown_anf_kind_error.rs
compilers/rust/tests/: addraw_output_codegen_test.rs  cli_debug_tests.rs  compiler_tests.rs  conformance_goldens.rs  crypto_codegen_tests.rs  ec_codegen_tests.rs  ec_optimizer_tests.rs  frontend_tests.rs  intent_intrinsics_bounds.rs  intent_intrinsics_tests.rs  multiformat_tests.rs  parser_format_tests.rs  sha256_codegen_tests.rs  unknown_anf_kind_tests.rs
conformance/: README.md  fold-on-allowlist.json  formats.json  go.mod  go.sum  (+5 more)
conformance/anf-interpreter/drivers/rust/: Cargo.toml
conformance/anf-interpreter/drivers/rust/src/: main.rs
integration/rust/: Cargo.toml  README.md
integration/rust/tests/: auction.rs  babybear.rs  blake3.rs  convergence_proof.rs  counter.rs  covenant_vault.rs  data_outputs.rs  ec_isolation.rs  escrow.rs  function_patterns.rs  fungible_token.rs  integration.rs  math_demo.rs  merkle_proof.rs  message_board.rs  nft.rs  nullfail_multimethod.rs  oracle_price_feed.rs  ordinals.rs  p256_wallet.rs  p2pkh.rs  p384_wallet.rs  post_quantum_wallet.rs  private_helper_outputs.rs  schnorr_zkp.rs  sha256_compress.rs  sha256_finalize.rs  slhdsa.rs  sphincs_wallet.rs  state_covenant.rs  tic_tac_toe.rs  wots.rs
integration/rust/tests/helpers/: mod.rs
tests/vectors/sp1/fri/evm-guest/regen/: Cargo.toml
tests/vectors/sp1/fri/evm-guest/regen/src/: main.rs
(+2337 files in other folders)
