[package]
name = "runar-integration-rust"
version = "0.1.0"
edition = "2021"
autotests = false

[features]
# `regtest` gates the on-chain deploy/call tests. These require a local Bitcoin
# regtest node reachable at RPC_URL (default http://localhost:18332) with
# credentials RPC_USER/RPC_PASS (defaults bitcoin/bitcoin). Start the node with:
#   ./integration/regtest.sh start
# Then run:
#   cargo test --features regtest
# Without this feature, only offline compile/script-size tests run.
default = []
regtest = []

[dependencies]
runar-lang = { path = "../../packages/runar-rs" }
runar-compiler-rust = { path = "../../compilers/rust" }
serde_json = "1"
sha2 = "0.10"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
ripemd = "0.1"
k256 = { version = "0.13", features = ["ecdsa"] }

[[test]]
name = "integration"
path = "tests/integration.rs"
