[package]
name = "runar-anf-driver-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "runar-anf-driver-rust"
path = "src/main.rs"

[dependencies]
runar-lang = { path = "../../../../packages/runar-rs" }
num-bigint = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
