[package]
name = "runar-evm-guest-fixture-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
p3-air = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-field = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
postcard = { version = "1", features = ["alloc"] }
rand = "0.10"
